--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/container.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Francois+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <script defer src="js/script.js"></script>
-    <title>tasks list</title>
+    <title>Tasks List</title>
 </head>
 
-<body>
-
+<body class="body">
+    <div class="container">
+        <h1 class="container__header">Lista zadań</h1>
+    </div>
+    <div class="container container--newTaskText">Dodaj nowe zadanie</div>
+    <form class="container container--addTask">
+        <input class="container__inputText" type="text">
+        <button class="container__addTaskButton">Dodaj zadanie</button>
+    </form>
 </body>
 
 </html>
