adding some functions

--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
         <h1 class="container__header">Lista zadań</h1>
     </div>
     <div class="container container--newTaskText">Dodaj nowe zadanie</div>
-    <form class="container container--addTask">
-        <input class="container__inputText" type="text">
-        <button class="container__addTaskButton">Dodaj zadanie</button>
+    <form class="container container--addTask js-formTask">
+        <input class="container__input" type="text">
+        <button class="container__button">Dodaj zadanie</button>
     </form>
+    <div class="container container--listHeader">Lista zadań</div>
+    <ul class="container container__list js-listTask">
+    </ul>
 </body>
 
 </html>
