add list function

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </div>
     <div class="container container--newTaskText">Dodaj nowe zadanie</div>
     <form class="container container--addTask js-formTask">
-        <input class="container__input" type="text">
-        <button class="container__button">Dodaj zadanie</button>
+        <input class="container__input js-newTask" type="text">
+        <button class="container__button" type="submit">Dodaj zadanie</button>
     </form>
     <div class="container container--listHeader">Lista zadań</div>
     <ul class="container container__list js-listTask">
