add font-weight to headers

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="container__formHeader">Dodaj nowe zadanie</div>
         <form class="container__form js-formTask">
-            <input class="container__inputField js-inputText" placeholder="Co jest do zrobienia">
+            <input class="container__inputField js-inputText" placeholder="Co jest do zrobienia ?">
             <button class="container__submitButton" type="submit">Dodaj zadanie</button>
         </form>
         <div class="container__listHeader">Lista zadań</div>
