--- a/index.html
+++ b/index.html
@@ -21,15 +21,20 @@
 <body>
     <div class="container">
         <h1 class="container__mainHeader">Lista zadań</h1>
-
-        <div class="container__formHeader">Dodaj nowe zadanie</div>
-        <form class="container__form js-formTask">
-            <input class="container__inputField js-inputText" placeholder="Co jest do zrobienia ?">
-            <button class="container__submitButton" type="submit">Dodaj zadanie</button>
-        </form>
-        <div class="container__listHeader">Lista zadań</div>
-        <ul class="container__list js-listTask">
+        <section>
+            <div class="container__header">Dodaj nowe zadanie</div>
+            <form class="container__section js-formTask">
+                <input class="container__inputField js-inputText" placeholder="Co jest do zrobienia ?">
+                <button class="container__submitButton" type="submit">Dodaj zadanie</button>
+            </form>
+        </section>
+        <section class="section">
+            <div class="section container__header">Lista zadań</div>
+            <div class="section container__header--buttons js-headerButtons"></div>
+        </section>
+        <ul class="container__section--list js-listTask">
         </ul>
+
     </div>
 </body>
 
